FileUndoManager: for copyjob only add undo if it copied something

Test plan, before applying this patch:
- copy some files/dirs in dolphin, note the Edit menu now has an "undo copy"
  action
- copy the same files/dirs to the same destination again, you should see
  the copy conflict dialog
- enable "apply to all" and click "skip", nothing is copied; now check the
  Edit menu again, you should see the "undo copy" action still enabled,
  because another undo command was added even when nothing was copied
- trigger "undo copy", nothing happens
- trigger "undo copy" again, now it's asking if you want to delete
  /path/to/dest/files-you-copied-earlier from the destination

Add a unittest.

BUG: 454226
FIXED-IN: 5.98